tests/snapshots/integration_test__error_unclosed_sum_type.snap
---
source: tests/integration_test.rs
assertion_line: 162
expression: err_msg
---
"unclosed_sum_type.tw:3:1: Expected ,, found fn\n   3 | fn classify(i: Int) FB {\n\n      ^-"
