tests/snapshots/integration_test__expr_expr_field.snap
---
source: tests/integration_test.rs
expression: ast
---
SourceFile {
    items: [
        Stmt(
            Expr(
                Expr {
                    id: ExprId(
                        1,
                    ),
                    kind: FieldAccess {
                        base: Expr {
                            id: ExprId(
                                0,
                            ),
                            kind: Ident(
                                "point",
                            ),
                            span: 0:0..5,
                        },
                        field: "x",
                    },
                    span: 0:0..7,
                },
            ),
        ),
    ],
    span: 0:0..7,
}
