tests/snapshots/integration_test__precedence_field_precedence.snap
---
source: tests/integration_test.rs
expression: ast
---
SourceFile {
    items: [
        Stmt(
            Expr(
                Expr {
                    kind: Binary {
                        op: Add,
                        left: Expr {
                            kind: FieldAccess {
                                base: Expr {
                                    kind: Ident(
                                        "obj",
                                    ),
                                    span: 0:0..3,
                                },
                                field: "field",
                            },
                            span: 0:0..9,
                        },
                        right: Expr {
                            kind: Literal(
                                Int(
                                    1,
                                ),
                            ),
                            span: 0:12..13,
                        },
                    },
                    span: 0:0..13,
                },
            ),
        ),
    ],
    span: 0:0..13,
}
