tests/snapshots/integration_test__precedence_subtraction_and_division.snap
---
source: tests/integration_test.rs
expression: ast
---
SourceFile {
    items: [
        Stmt(
            Expr(
                Expr {
                    kind: Binary {
                        op: Sub,
                        left: Expr {
                            kind: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            span: 0:0..2,
                        },
                        right: Expr {
                            kind: Binary {
                                op: Div,
                                left: Expr {
                                    kind: Literal(
                                        Int(
                                            6,
                                        ),
                                    ),
                                    span: 0:5..6,
                                },
                                right: Expr {
                                    kind: Literal(
                                        Int(
                                            2,
                                        ),
                                    ),
                                    span: 0:9..10,
                                },
                            },
                            span: 0:5..10,
                        },
                    },
                    span: 0:0..10,
                },
            ),
        ),
    ],
    span: 0:0..10,
}
